--- a/Servers/Tomcat v9.0 Server at 192.168.15.12-config/web.xml
+++ b/Servers/Tomcat v9.0 Server at 192.168.15.12-config/web.xml
@@ -4727,8 +4727,8 @@
         <welcome-file>index.html</welcome-file>
         <welcome-file>index.htm</welcome-file>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>myimage.jpg</welcome-file>
         <welcome-file>myinfo.txt</welcome-file>
-        
     </welcome-file-list>
 
 </web-app>
